2009-03-26  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/settingsdlg.cpp: Further tweaks to the widths of
	settings dialog widgets.

2009-03-23  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/settingsdlg.cpp: Tweak width of settings dialog
	widgets used for test connection parameters.

2009-03-03  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/configitem.cpp, standalone/wxwin/configitem.h:
	Initialise 'modifiable' member variable in alternative constructor.
	[ Bugzilla 1000705 ]

2009-02-27  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/configtooldoc.cpp: Limit backtrace length to 64 in
	case GDB fails to detect the thread entry point. [ Bugzilla 1000699 ]

2009-02-23  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/settingsdlg.cpp: Rationalise serial baud options.
	[ Bugzilla 1000687 ]

2009-02-16  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/mainwin.cpp: Tweak the conflicts status pane width.

	* standalone/wxwin/configtooldoc.cpp, standalone/wxwin/filename.cpp:
	Accommodate UNC file paths.

	* standalone/wxwin/propertywin.cpp, standalone/wxwin/conflictwin.cpp:
	Automatically size the last column.

	* standalone/wxwin/configitem.cpp, standalone/wxwin/configitem.h,
	  standalone/wxwin/configtree.cpp: Do not grey tree item text for
	active non-modifiable items.

2008-12-31  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/outputwin.cpp, standalone/wxwin/outputwin.h,
	  standalone/wxwin/mainwin.cpp:	Migrate save output method from
	ecMainFrame to ecOutputWindow and manipulate state of associated
	menu item. Fix from Spencer Oliver.

	* common/common/build.cxx: Tweak library build rule generation to
	allow correct use of the CDL make_object command in future.

2008-12-30  John Dallaway  <john@dallaway.org.uk>

	* standalone/wxwin/settingsdlg.cpp: Browse all files when selecting
	HTML and text viewer applications under Linux.

2008-12-12  John Dallaway  <jld@ecoscentric.com>
